# dataset_bias_detector

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  data.csv  pyproject.toml
.github/workflows/: bias-audit.yml  ci.yml
bias_auditor/: __init__.py  cli.py
bias_auditor/core/: __init__.py  auditor.py  auto_detect.py  config.py  report.py
bias_auditor/detectors/: __init__.py  feature_proxy.py  label_bias.py  missing_data.py  representation.py
bias_auditor/integrations/: __init__.py  mlflow.py  wandb.py
bias_auditor/llm/: __init__.py  base.py  explainer.py  prompts.py  text_analyzer.py
bias_auditor/llm/providers/: __init__.py  anthropic.py  local.py  openai.py
bias_auditor/metrics/: __init__.py  fairness.py
bias_auditor/remediation/: __init__.py  resampling.py  reweighting.py  strategies.py
bias_auditor/report/: __init__.py  html_generator.py  json_export.py
bias_auditor/visualizations/: __init__.py  charts.py
examples/: basic_audit.py  pipeline_integration.py  remediation_demo.py  with_llm.py
skills/dataset-bias-audit/: SKILL.md
skills/dataset-bias-audit/references/: interpreting-results.md
tests/: __init__.py  test_auditor.py  test_auto_detect.py  test_detectors.py  test_metrics.py  test_remediation.py  test_report.py  test_visualizations.py
